// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Info Popup variants: Icon Popup 1`] = `
<Dropdown
  menu={
    <Menu>
      <ForwardRef(styled.div)>
        <ForwardRef(styled.div)>
          Popup
        </ForwardRef(styled.div)>
      </ForwardRef(styled.div)>
    </Menu>
  }
  noScroll={true}
  placement="bottom-start"
>
  <Manager>
    <Reference
      innerRef={[Function]}
    >
      <InnerReference
        innerRef={[Function]}
        setReferenceNode={[Function]}
      >
        <span
          onClick={[Function]}
        >
          <div>
            <Button>
              <PrimaryButton>
                <Styled(Styled(styled.button))
                  canHover={true}
                >
                  <StyledComponent
                    canHover={true}
                    forwardedComponent={
                      Object {
                        "$$typeof": Symbol(react.forward_ref),
                        "_foldedDefaultProps": Object {
                          "canHover": true,
                        },
                        "attrs": Array [],
                        "componentStyle": ComponentStyle {
                          "componentId": "sc-jWBwVP",
                          "isStatic": false,
                          "lastClassName": "csgNpl",
                          "rules": Array [
                            "
  ",
                            "
  ",
                            "display:",
                            [Function],
                            ";align-items:center;",
                            [Function],
                            " ",
                            [Function],
                            " justify-content:center;",
                            "
  ",
                            [Function],
                            "

  padding: 0;
  border: 0;
  background: inherit;

  &:focus,
  &:active {
    outline: 0;
  }
",
                            "
",
                            "
  ",
                            "
  height: ",
                            "42",
                            "px;
  border-radius: 90px;
  font-size: 15px;
  line-height: 18px;

  width: ",
                            [Function],
                            ";
",
                            "
",
                            "
  color: #fff;
  box-shadow: 0 0 1px 0 rgba(17, 49, 96, 0.10), 0 4px 8px 0 rgba(17, 49, 96, 0.16);
  font-weight: 600;
  background: linear-gradient(-180deg, #5d9df5 0%, #176ce0 68%);
  transition: all 0.15s ease-out;
  background-size: 1px 52px;
  /* ",
                            [Function],
                            " */

  ",
                            [Function],
                            "

  &:active {
    box-shadow: 0 0 6px 0 rgba(17, 49, 96, 0.1), 0 6px 12px 0 rgba(17, 49, 96, 0.2);
  }
",
                          ],
                        },
                        "displayName": "Styled(Styled(styled.button))",
                        "foldedComponentIds": Array [
                          "sc-bdVaJa",
                          "sc-ifAKCX",
                        ],
                        "render": [Function],
                        "styledComponentId": "sc-jWBwVP",
                        "target": "button",
                        "toString": [Function],
                        "warnTooManyClasses": [Function],
                        "withComponent": [Function],
                      }
                    }
                    forwardedRef={null}
                  >
                    <button
                      className="sc-bdVaJa sc-ifAKCX sc-jWBwVP csgNpl"
                    >
                      <components__PrimaryButtonLabel>
                        <StyledComponent
                          forwardedComponent={
                            Object {
                              "$$typeof": Symbol(react.forward_ref),
                              "attrs": Array [],
                              "componentStyle": ComponentStyle {
                                "componentId": "components__PrimaryButtonLabel-rbaz43-0",
                                "isStatic": true,
                                "lastClassName": "bPKTiG",
                                "rules": Array [
                                  "padding:0 22px;",
                                ],
                              },
                              "displayName": "components__PrimaryButtonLabel",
                              "foldedComponentIds": Array [],
                              "render": [Function],
                              "styledComponentId": "components__PrimaryButtonLabel-rbaz43-0",
                              "target": "span",
                              "toString": [Function],
                              "warnTooManyClasses": [Function],
                              "withComponent": [Function],
                            }
                          }
                          forwardedRef={null}
                        >
                          <span
                            className="components__PrimaryButtonLabel-rbaz43-0 bPKTiG"
                          >
                            Info
                          </span>
                        </StyledComponent>
                      </components__PrimaryButtonLabel>
                    </button>
                  </StyledComponent>
                </Styled(Styled(styled.button))>
              </PrimaryButton>
            </Button>
          </div>
        </span>
      </InnerReference>
    </Reference>
  </Manager>
</Dropdown>
`;

exports[`Storyshots Info Popup variants: Label Icon Popup 1`] = `
<Dropdown
  menu={
    <Menu>
      <ForwardRef(styled.div)>
        <ForwardRef(styled.div)>
          Popup
        </ForwardRef(styled.div)>
      </ForwardRef(styled.div)>
    </Menu>
  }
  noScroll={true}
  placement="bottom-start"
>
  <Manager>
    <Reference
      innerRef={[Function]}
    >
      <InnerReference
        innerRef={[Function]}
        setReferenceNode={[Function]}
      >
        <span
          onClick={[Function]}
        >
          <div>
            <styled.div>
              <StyledComponent
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "sc-gipzik",
                      "isStatic": true,
                      "lastClassName": "bHxBUJ",
                      "rules": Array [
                        "
  position: relative;
  top: 10px;
  margin-left: 10px;
  margin-right: 10px;
  display: inline-block;
",
                      ],
                    },
                    "displayName": "styled.div",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "sc-gipzik",
                    "target": "div",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
              >
                <div
                  className="sc-gipzik bHxBUJ"
                >
                  Slots
                </div>
              </StyledComponent>
            </styled.div>
            <styled.div>
              <StyledComponent
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "sc-jlyJG",
                      "isStatic": true,
                      "lastClassName": "RnzGD",
                      "rules": Array [
                        "
  top: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  color: #5d9df5;
",
                      ],
                    },
                    "displayName": "styled.div",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "sc-jlyJG",
                    "target": "div",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
              >
                <div
                  className="sc-jlyJG RnzGD"
                >
                  <ForwardRef
                    color="#8da2b5"
                    icon="info"
                  >
                    <styled.span
                      color="#8da2b5"
                      size={16}
                    >
                      <StyledComponent
                        color="#8da2b5"
                        forwardedComponent={
                          Object {
                            "$$typeof": Symbol(react.forward_ref),
                            "attrs": Array [],
                            "componentStyle": ComponentStyle {
                              "componentId": "sc-bxivhb",
                              "isStatic": false,
                              "lastClassName": "eurnwF",
                              "rules": Array [
                                "
  ",
                                [Function],
                                "

  color: ",
                                [Function],
                                ";
  width: ",
                                [Function],
                                "px;
  height: ",
                                [Function],
                                "px;
  box-sizing: content-box;
  
  ",
                                [Function],
                                "

  & > svg {
    display: block;
    width: inherit;
    height: inherit;

  }

  &:hover,
  &:active {
    color: ",
                                [Function],
                                ";

  }
",
                              ],
                            },
                            "displayName": "styled.span",
                            "foldedComponentIds": Array [],
                            "render": [Function],
                            "styledComponentId": "sc-bxivhb",
                            "target": "span",
                            "toString": [Function],
                            "warnTooManyClasses": [Function],
                            "withComponent": [Function],
                          }
                        }
                        forwardedRef={null}
                        size={16}
                      >
                        <span
                          className="sc-bxivhb eurnwF"
                          color="#8da2b5"
                          size={16}
                        >
                          <test-file-stub />
                        </span>
                      </StyledComponent>
                    </styled.span>
                  </ForwardRef>
                </div>
              </StyledComponent>
            </styled.div>
          </div>
        </span>
      </InnerReference>
    </Reference>
  </Manager>
</Dropdown>
`;

exports[`Storyshots Info Popup variants: Label Popup 1`] = `
<Dropdown
  menu={
    <Menu>
      <ForwardRef(styled.div)>
        <ForwardRef(styled.div)>
          Popup
        </ForwardRef(styled.div)>
      </ForwardRef(styled.div)>
    </Menu>
  }
  noScroll={true}
  placement="bottom-start"
>
  <Manager>
    <Reference
      innerRef={[Function]}
    >
      <InnerReference
        innerRef={[Function]}
        setReferenceNode={[Function]}
      >
        <span
          onClick={[Function]}
        >
          <div>
            <styled.div>
              <StyledComponent
                forwardedComponent={
                  Object {
                    "$$typeof": Symbol(react.forward_ref),
                    "attrs": Array [],
                    "componentStyle": ComponentStyle {
                      "componentId": "sc-jlyJG",
                      "isStatic": true,
                      "lastClassName": "RnzGD",
                      "rules": Array [
                        "
  top: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  color: #5d9df5;
",
                      ],
                    },
                    "displayName": "styled.div",
                    "foldedComponentIds": Array [],
                    "render": [Function],
                    "styledComponentId": "sc-jlyJG",
                    "target": "div",
                    "toString": [Function],
                    "warnTooManyClasses": [Function],
                    "withComponent": [Function],
                  }
                }
                forwardedRef={null}
              >
                <div
                  className="sc-jlyJG RnzGD"
                >
                  How it Works
                </div>
              </StyledComponent>
            </styled.div>
          </div>
        </span>
      </InnerReference>
    </Reference>
  </Manager>
</Dropdown>
`;
